verif/test/deca/context/invalid/provided/affect-incompatible-verif.res
src/test/deca/context/invalid/provided/affect-incompatible.deca:15:7: Cannot assign expression of type 'boolean' to a variable of type 'int'
